--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         run : |
           aws cloudformation deploy \
           --stack-name AWSBookDemo \
-          --parameter-overrides "SpringBootAppName=${{ env.NEW_SPRING_BOOT_APP_NAME }},LambdaHandlerAppName=${{ env.NEW_LAMBDA_HANDLER_APP_NAME }},AccessKey=${{ secrets.AWS_ACCESS_KEY }},SecretKey=${{ secrets.AWS_SECRET_KEY }},Region=${{ env.AWS_REGION_NAME }},DynamoDbEndpoint=${{ env.DYNAMO_DB_ENDPOINT }},SqsEndpoint=${{ env.SQS_ENDPOINT }},SqsBookEndpoint=${{ env.SQS_BOOK_ENDPOINT }},SqsBookGroup=${{ env.SQS_BOOK_GROUP }}" \
-          --template-url https://s3.amazonaws.com/user-apps/book.template \
+          --parameter-overrides SpringBootAppName=${{ env.NEW_SPRING_BOOT_APP_NAME }},LambdaHandlerAppName=${{ env.NEW_LAMBDA_HANDLER_APP_NAME }},AccessKey=${{ secrets.AWS_ACCESS_KEY }},SecretKey=${{ secrets.AWS_SECRET_KEY }},Region=${{ env.AWS_REGION_NAME }},DynamoDbEndpoint=${{ env.DYNAMO_DB_ENDPOINT }},SqsEndpoint=${{ env.SQS_ENDPOINT }},SqsBookEndpoint=${{ env.SQS_BOOK_ENDPOINT }},SqsBookGroup=${{ env.SQS_BOOK_GROUP }} \
+          --template-file book.json \
           --capabilities CAPABILITY_IAM \
           --no-fail-on-empty-changeset
