--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Copy Cloudformation template to S3
         run: |
           aws s3 rm s3://${{ env.AWS_S3_BUCKET }}${{ env.CLOUDFORMATION_TEMPLATE }} \
-          && aws s3 cp ./book.json s3://${{ env.AWS_S3_BUCKET }}${{ env.CLOUDFORMATION_TEMPLATE }  
+          && aws s3 cp ./book.json s3://${{ env.AWS_S3_BUCKET }}${{ env.CLOUDFORMATION_TEMPLATE }}  
   cd:
     runs-on: ubuntu-latest
     needs: [ci]
