--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,6 @@ jobs:
 
       - name: Copy Lambda Handler jar to S3
         run:  aws s3 cp ${{ env.LAMBDA_HANDLER_JAR_PATH }} s3://${{ env.AWS_S3_BUCKET }}/${{ env.NEW_LAMBDA_HANDLER_APP_NAME }}
-      
-      - name: Ls files
-        run: ls 
         
       - name: Copy Cloudformation template to S3
         run: |
@@ -58,6 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ci]
     steps:
+      - name: Clone repo
+        uses: actions/checkout@v2
 
       - name: Configure my AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -72,6 +71,6 @@ jobs:
           --stack-name AWSBookDemo \
           --parameter-overrides SpringBootAppName=${{ env.NEW_SPRING_BOOT_APP_NAME }},LambdaHandlerAppName=${{ env.NEW_LAMBDA_HANDLER_APP_NAME }},AccessKey=${{ secrets.AWS_ACCESS_KEY }},SecretKey=${{ secrets.AWS_SECRET_KEY }},Region=${{ env.AWS_REGION_NAME }},DynamoDbEndpoint=${{ env.DYNAMO_DB_ENDPOINT }},SqsEndpoint=${{ env.SQS_ENDPOINT }},SqsBookEndpoint=${{ env.SQS_BOOK_ENDPOINT }},SqsBookGroup=${{ env.SQS_BOOK_GROUP }} \
           --s3-bucket ${{ env.AWS_S3_BUCKET }} \
-          --template-file https://user-apps.s3.us-east-2.amazonaws.com/book.template \
+          --template-file book.json \
           --capabilities CAPABILITY_IAM \
           --no-fail-on-empty-changeset
