--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
         run : |
           aws cloudformation deploy \
           --stack-name AWSBookDemo \
-          --parameter-overrides SpringBootAppName=${{ env.NEW_SPRING_BOOT_APP_NAME }},LambdaHandlerAppName=${{ env.NEW_LAMBDA_HANDLER_APP_NAME }},AccessKey=${{ secrets.AWS_ACCESS_KEY }},SecretKey=${{ secrets.AWS_SECRET_KEY }},Region=${{ env.AWS_REGION_NAME }},DynamoDbEndpoint=${{ env.DYNAMO_DB_ENDPOINT }},SqsEndpoint=${{ env.SQS_ENDPOINT }},SqsBookEndpoint=${{ env.SQS_BOOK_ENDPOINT }},SqsBookGroup=${{ env.SQS_BOOK_GROUP }} \
+          --parameter-overrides SpringBootAppName=${{ env.NEW_SPRING_BOOT_APP_NAME }} LambdaHandlerAppName=${{ env.NEW_LAMBDA_HANDLER_APP_NAME }} AccessKey=${{ secrets.AWS_ACCESS_KEY }} SecretKey=${{ secrets.AWS_SECRET_KEY }} Region=${{ env.AWS_REGION_NAME }} DynamoDbEndpoint=${{ env.DYNAMO_DB_ENDPOINT }} SqsEndpoint=${{ env.SQS_ENDPOINT }} SqsBookEndpoint=${{ env.SQS_BOOK_ENDPOINT }} SqsBookGroup=${{ env.SQS_BOOK_GROUP }} \
           --s3-bucket ${{ env.AWS_S3_BUCKET }} \
           --template-file book.json \
           --capabilities CAPABILITY_IAM \
